Update CSS: Fix width of select and radio fields to avoid overflow on the next line, making horrible badge status (too big)

--- a/siteconfig/static/css/style.css
+++ b/siteconfig/static/css/style.css
@@ -115,15 +115,11 @@ img.map {
 	background-color: #007bff;
 }
 
-#selected-video {
-	width: 70%;
+select.select-media {
+	width: 90%;
 }
 
-.width-70 {
-	width: 70%;
-}
-
-.width-80 {
+div.radio-raspi {
 	width: 80%;
 }
 
